--- a/index.html
+++ b/index.html
@@ -15,21 +15,27 @@
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Leaway</a>
+        <a class="navbar-brand" href="#">BackDoor-Club</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="Products.html">Products</a>
+              <a class="nav-link active" href="Products.html">Shop</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
+              <a class="nav-link active" href="checkout.html">Checkout</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="Promotions.html">promotions</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="Support.html">Support</a>
+              </li>
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
