--- a/Products.html
+++ b/Products.html
@@ -10,41 +10,38 @@
   <link href="carousel.css" rel="stylesheet">
 </head>
 
-<header>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">BackDoor-Club</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="Products.html">Shop</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="checkout.html">Checkout</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="promotions.html">Promotions</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link active" href="Support.html">Support</a>
-            </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
-</header>
-
 <body>
+
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">BackDoor-Club</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="Products.html">Shop</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="Support.html">Support</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="checkout.html">Cart</a>
+              </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </header>
 
   <!-- Header-->
   <header class="bg-dark py-5">
@@ -62,7 +59,8 @@
               <div class="col mb-5">
                   <div class="card h-100">
                       <!-- Product image-->
-                      <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                      <a href="productitem.html">
+                      <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
@@ -80,10 +78,14 @@
               </div>
               <div class="col mb-5">
                   <div class="card h-100">
+          
                       <!-- Sale badge-->
                       <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                       <!-- Product image-->
-                      <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                      <a href="productitem.html" >
+                      <img class="card-img-top"
+                    
+                      src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"  alt="..." /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
@@ -113,7 +115,8 @@
                       <!-- Sale badge-->
                       <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                       <!-- Product image-->
-                      <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                      <a href="productitem.html" target="_blank">
+                      <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
@@ -133,7 +136,8 @@
               <div class="col mb-5">
                   <div class="card h-100">
                       <!-- Product image-->
-                      <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                      <a href="productitem.html" target="_blank">
+                      <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
