--- a/Support.html
+++ b/Support.html
@@ -28,13 +28,10 @@
               <a class="nav-link active" href="Products.html">Shop</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="checkout.html">Checkout</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="promotions.html">Promotions</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link active" href="Support.html">Support</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="checkout.html">Cart</a>
               </li>
           </ul>
           <form class="d-flex" role="search">
