--- a/Products.html
+++ b/Products.html
@@ -24,9 +24,13 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="Products.html">Shop</a>
-            </li>
+            <a class="nav-link dropdown-toggle nav-link active" id="navbarDropdown" href="Products.html" role="button" data-bs-toggle="dropdown" aria-expanded="true">Shop</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="Support.html">All Products</a></li>
+                                <li><hr class="dropdown-divider" /></li>
+                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
+                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                            </ul>
             <li class="nav-item">
                 <a class="nav-link active" href="Support.html">Support</a>
               </li>
