--- a/Products.html
+++ b/Products.html
@@ -6,46 +6,54 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   <link href="carousel.css" rel="stylesheet">
 </head>
 
-<body>
 
-  <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">BackDoor-Club</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-            </li>
-            <a class="nav-link dropdown-toggle nav-link active" id="navbarDropdown" href="Products.html" role="button" data-bs-toggle="dropdown" aria-expanded="true">Shop</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="Support.html">All Products</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
-                            </ul>
-            <li class="nav-item">
-                <a class="nav-link active" href="Support.html">Support</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="checkout.html">Cart</a>
-              </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </div>
-      </div>
-    </nav>
-  </header>
+<body class="bg-light">
+
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">BackDoor-Club</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+              <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle nav-link active" href="Products.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Shop
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="Products.html">Shop</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="promotions.html">Promotions</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="Support.html">Support</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="checkout.html">
+                    <i class="bi bi-cart"></i>
+                    </a>
+                  </li>
+                 
+              </ul>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
+      </header>
 
   <!-- Header-->
   <header class="bg-dark py-5">
@@ -64,7 +72,7 @@
                   <div class="card h-100">
                       <!-- Product image-->
                       <a href="productitem.html">
-                      <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." /></a>
+                      <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
@@ -86,10 +94,9 @@
                       <!-- Sale badge-->
                       <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                       <!-- Product image-->
-                      <a href="productitem.html" >
-                      <img class="card-img-top"
-                    
-                      src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"  alt="..." /></a>
+                      <a href="productitem.html">
+                        <img class="card-img-top"
+                         src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
@@ -119,8 +126,8 @@
                       <!-- Sale badge-->
                       <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                       <!-- Product image-->
-                      <a href="productitem.html" target="_blank">
-                      <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." /></a>
+                      <a href="productitem.html">
+                        <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
@@ -140,8 +147,8 @@
               <div class="col mb-5">
                   <div class="card h-100">
                       <!-- Product image-->
-                      <a href="productitem.html" target="_blank">
-                      <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." /></a>
+                      <a href="productitem.html">
+                        <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
@@ -170,8 +177,8 @@
                       <!-- Sale badge-->
                       <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                       <!-- Product image-->
-                      <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                      <!-- Product details-->
+                      <a href="productitem.html">
+                        <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                       <div class="card-body p-4">
                           <div class="text-center">
                               <!-- Product name-->
@@ -190,7 +197,8 @@
               <div class="col mb-5">
                   <div class="card h-100">
                       <!-- Product image-->
-                      <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                      <a href="productitem.html">
+                        <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
@@ -211,7 +219,8 @@
                       <!-- Sale badge-->
                       <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                       <!-- Product image-->
-                      <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                      <a href="productitem.html">
+                        <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
@@ -239,7 +248,8 @@
               <div class="col mb-5">
                   <div class="card h-100">
                       <!-- Product image-->
-                      <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                      <a href="productitem.html">
+                        <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
@@ -270,10 +280,6 @@
   <footer class="py-5 bg-dark">
       <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
   </footer>
-  <!-- Bootstrap core JS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Core theme JS-->
-  <script src="js/scripts.js"></script>
 </body>
 
 </html>
