--- a/promotions.html
+++ b/promotions.html
@@ -277,7 +277,7 @@
 </section>
 <!-- Footer-->
 <footer class="py-5 bg-dark">
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; BackDoor-Club 2022</p></div>
 </footer>
 </body>
 
